--- a/package.json
+++ b/package.json
@@ -2,16 +2,23 @@
   "name": "scene-builder",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://hackyxicor.github.io/react-native-drag-and-drop-ui-creator",
   "dependencies": {
+    "antd": "^3.23.1",
+    "gh-pages": "^2.1.1",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
-    "react-scripts": "3.1.1"
+    "react-scripts": "3.1.1",
+    "react-window-size": "^1.2.2"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "yarn run build",
+    "deploy1": "gh-pages -d build",
+    "push": "rm -rf build && yarn run predeploy && yarn run deploy1"
   },
   "eslintConfig": {
     "extends": "react-app"
